🐞 fix: organize tecnologies pills in project section in mobile view

--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -47,7 +47,7 @@ const TAGS = {
 	},
 	TAILWIND: {
 		name: 'Tailwindcss',
-		class: 'bg-sky-800/50 text-sky-200/80 border-sky-200/60',
+		class: 'bg-sky-800/50 text-sky-200/80 border-sky-200/60 max-sm:col-span-3',
 		icon: IconTailwind,
 	},
 	VUE: {
@@ -77,7 +77,7 @@ const TAGS = {
 	},
 	TYPESCRIPT: {
 		name: 'Typescript',
-		class: 'bg-blue-800/50 text-blue-200/80 border-blue-200/60',
+		class: 'bg-blue-800/50 text-blue-200/80 border-blue-200/60 max-sm:col-span-3',
 		icon: IconTypescript,
 	},
 };
