--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -8,6 +8,8 @@ import Presentation from './Presentation.astro';
 import { getI18N } from '../i18n/';
 import Experience from './Experience.astro';
 import Articles from './Articles.astro';
+import HeadMeta from '../components/Header/HeadMeta.astro';
+
 export interface Props {
 	public_src: string;
 }
@@ -16,6 +18,7 @@ const i18n = getI18N({ currentLocale });
 ---
 
 <Layout {...i18n}>
+	<HeadMeta SEO_TITLE={i18n.SEO_TITLE} SEO_DESCRIPTION={i18n.SEO_DESCRIPTION} slot="structured-data" />
 	<Header {...i18n} {...Astro.props} />
 	<main>
 		<Presentation {...i18n} />
