--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -29,7 +29,7 @@ const { HEADER_EXPERIENCE, EXPERIENCE } = Astro.props;
 				<li class=" mb-20 ms-8">
 					<div class="flex flex-row items-center">
 						<div class="absolute start-[-0.9rem] mb-1 overflow-hidden rounded-full border border-teal-200 bg-slate-50 shadow-lg shadow-teal-800/90">
-							<img class="size-7" src={`/images/${job.logoFile}`} alt={job.logoAlt} />
+							<img class="size-7" src={`/images/${job.logoFile}`} alt={job.logoAlt} loading="lazy" />
 						</div>
 						<h3 class="reveal-experience-info my-0.5 text-xl font-semibold text-teal-200">
 							{job.ocupation}
