--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,14 +16,13 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <html lang={SEO_LANG}>
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content={SEO_DESCRIPTION} />
 		<meta
 			name="keywords"
 			content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website,Github Page,Cuvimaker,Rusty Copier,Vue Fluid DnD, Fluid DnD"
 		/>
 		<meta name="author" content="carlosjorger" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta property="og:locale" content={SEO_LOCALE} />
 		<meta property="og:url" content="https://carlosjorger.github.io" />
 		<meta property="og:type" content="website" />
@@ -71,7 +70,8 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 	</head>
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
-		is:inline></script>
+		is:inline
+		defer></script>
 	<slot name="structured-data" />
 	<body>
 		<ViewTransitions />
