🐞 fix: remove mdx

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,6 +53,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 			media="(prefers-color-scheme: dark)"
 		/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<!-- TODO: Optimize fonts-->
 		<link
 			rel="preload"
 			href="https://fonts.googleapis.com/css?family=Lato:400&display=swap"
