🎈 perf: remove unnecessary elements

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -3,6 +3,9 @@ import Subtitle from '@shared/Subtitle.astro';
 import CustomParagraph from '@shared/CustomParagraph.astro';
 import SectionContainer from './shared/SectionContainer.astro';
 // TODO: add a more original description
+// TODO: reduce Final HTML (DOM) size
+// 	   - Remove unnecessary elements
+// 	   - Optimize svgs with svgo
 export interface Props {
 	ABOUT_ME_TITLE: string;
 	ABOUT_ME_DESCRIPTION: string;
