--- a/src/components/icons/IconCode.astro
+++ b/src/components/icons/IconCode.astro
@@ -1,13 +1,1 @@
-<svg
-	xmlns="http://www.w3.org/2000/svg"
-	class="icon icon-tabler icon-tabler-code"
-	viewBox="0 0 24 24"
-	stroke-width="2"
-	stroke="currentColor"
-	fill="none"
-	stroke-linecap="round"
-	stroke-linejoin="round"
-	><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-		d="M7 8l-4 4l4 4"></path><path d="M17 8l4 4l-4 4"></path><path
-		d="M14 4l-4 16"></path></svg
->
+<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="icon icon-tabler icon-tabler-code" viewBox="0 0 24 24"><path stroke="none" d="M0 0h24v24H0z"/><path d="m7 8-4 4 4 4m10-8 4 4-4 4M14 4l-4 16"/></svg>
