--- a/src/components/icons/IconTwitter.astro
+++ b/src/components/icons/IconTwitter.astro
@@ -1,13 +1,1 @@
-<svg
-	xmlns="http://www.w3.org/2000/svg"
-	viewBox="0 0 24 24"
-	fill="none"
-	stroke="currentColor"
-	stroke-width="2"
-	stroke-linecap="round"
-	stroke-linejoin="round"
-	class="icon icon-tabler icons-tabler-outline icon-tabler-brand-x"
-	><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-		d="M4 4l11.733 16h4.267l-11.733 -16z"></path><path
-		d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772"></path></svg
->
+<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-x" viewBox="0 0 24 24"><path stroke="none" d="M0 0h24v24H0z"/><path d="m4 4 11.733 16H20L8.267 4zm0 16 6.768-6.768m2.46-2.46L20 4"/></svg>
