--- a/src/components/icons/IconVue.astro
+++ b/src/components/icons/IconVue.astro
@@ -1,15 +1,13 @@
 <svg
-	width="256"
-	height="221"
-	viewBox="0 0 256 221"
 	xmlns="http://www.w3.org/2000/svg"
 	preserveAspectRatio="xMidYMid"
+	viewBox="0 0 256 221"
 	{...Astro.props}
 	><path
-		d="M204.8 0H256L128 220.8 0 0h97.92L128 51.2 157.44 0h47.36Z"
-		fill="#41B883"></path><path
-		d="m0 0 128 220.8L256 0h-51.2L128 132.48 50.56 0H0Z"
-		fill="#41B883"></path><path
-		d="M50.56 0 128 133.12 204.8 0h-47.36L128 51.2 97.92 0H50.56Z"
-		fill="#35495E"></path></svg
+		fill="#41b883"
+		d="M204.8 0H256L128 220.8 0 0h97.92L128 51.2 157.44 0z"></path><path
+		fill="#41b883"
+		d="m0 0 128 220.8L256 0h-51.2L128 132.48 50.56 0z"></path><path
+		fill="#35495e"
+		d="M50.56 0 128 133.12 204.8 0h-47.36L128 51.2 97.92 0z"></path></svg
 >
