🎈 perf: optimize fonts

--- a/src/components/Articles.astro
+++ b/src/components/Articles.astro
@@ -38,7 +38,7 @@ const allPosts = await Astro.glob('../pages/posts/*.md');
 									)}
 									class=" mb-0 p-1 pb-0 text-lg text-lime-200/60  drop-shadow-[0_15px_20px_black] max-sm:text-base"
 								/>
-								<header class="m-1 text-2xl font-extrabold text-teal-200 max-md:text-3xl">
+								<header class="m-1 text-2xl font-bold text-teal-200 max-md:text-3xl">
 									<h3 class="m-0 drop-shadow-[0_15px_20px_black]">
 										{post.frontmatter.title}
 									</h3>
