--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -36,7 +36,7 @@ const { HEADER_EXPERIENCE, EXPERIENCE } = Astro.props;
 								loading="lazy"
 							/>
 						</div>
-						<h3 class="reveal-experience-info my-0.5 text-xl font-semibold text-teal-200">
+						<h3 class="reveal-experience-info my-0.5 text-xl font-bold text-teal-200">
 							{job.ocupation}
 						</h3>
 					</div>
