--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -67,7 +67,7 @@ const {
 				class="m-0 flex min-h-72 w-11/12 flex-col items-start justify-between p-5 transition-[transform] duration-300 group-hover:scale-105 max-sm:w-full max-sm:justify-evenly max-sm:p-4 max-sm:group-hover:scale-105"
 			>
 				<header
-					class="m-1 text-xl font-extrabold text-teal-200 max-sm:text-[1.65rem]"
+					class="m-1 text-xl font-bold text-teal-200 max-sm:text-[1.65rem]"
 				>
 					<h3 class="m-0 text-3xl drop-shadow-[0_15px_20px_black]">
 						{title}
