--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -17,6 +17,35 @@
 }
 
 /* || GENERAL STYLES */
+@font-face {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url("/fonts/Lato-Regular.woff2") format("woff2");
+}
+@font-face {
+	font-family: 'Lato';
+	font-style: italic;
+	font-weight: 400;
+	font-display: swap;
+	src: url("/fonts/Lato-Italic.woff2") format("woff2");
+}
+
+@font-face {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+	src: url("/fonts/Lato-Bold.woff2") format("woff2");
+}
+@font-face {
+	font-family: 'Lato';
+	font-style: italic;
+	font-weight: 700;
+	font-display: swap;
+	src: url("/fonts/Lato-BoldItalic.woff2") format("woff2");
+}
 
 h1,
 h2,
