--- a/src/components/shared/WidthContainer.astro
+++ b/src/components/shared/WidthContainer.astro
@@ -1,3 +1,3 @@
-<div class="m-0 mx-auto w-[50%] max-md:w-[75%] max-sm:w-[85%]">
+<div class="m-0 mx-auto w-[50%] max-xl:w-[65%] max-lg:w-[60%] max-md:w-[75%] max-sm:w-[85%]">
 	<slot />
 </div>
