🎈 perf: add lazy loaging to cover images of articles

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -58,6 +58,7 @@ const postLayoutProps = { ...i18n, SEO_TITLE, SEO_DESCRIPTION };
 				{...frontmatter.image}
 				height="520"
 				width="925"
+				loading="lazy"
 			/>
 			<article
 				class="prose prose-custom mb-10 max-w-none break-words dark:prose-invert lg:prose-base prose-img:mx-auto"
