--- a/src/components/Articles.astro
+++ b/src/components/Articles.astro
@@ -27,7 +27,7 @@ const allPosts = await Astro.glob('../pages/posts/*.md');
 							<img
 								transition:name={post.frontmatter.title}
 								src={post.frontmatter.image.src}
-								class="aspect-[89/55] w-56 rounded-xl max-lg:w-full"
+								class="w-[234px] rounded-xl max-lg:w-full"
 								alt={post.frontmatter.image.alt}
 							/>
 							<section>
