✨ feat: update resume

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -18,6 +18,8 @@ const {
 	ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH,
 	ABOUT_ME_CV_ARIA_LABEL,
 } = Astro.props;
+
+const locale = Astro.currentLocale
 ---
 
 <SectionContainer id="aboutMe" class="h-screen max-sm:h-full max-sm:pt-16">
@@ -37,7 +39,7 @@ const {
 		/>
 		<a
 			class="reveal mt-2 rounded-md border-2 border-[--default-secundary-font-color-2] py-2.5 text-center text-2xl font-bold text-teal-300 transition-colors duration-500 ease-out hover:bg-teal-300 hover:text-[--default-background-color] max-sm:mt-10"
-			href="/pdfs/resume.pdf"
+			href=`/pdfs/${locale}/resume.pdf`
 			target="_blank"
 			aria-label={ABOUT_ME_CV_ARIA_LABEL}>Curriculum Vitae</a
 		>
